--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-slider": "^1.2.0",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
